# Amroha-Cyber-security-

./: .dockerignore  .gitignore  CyberThreatForge_Project_Presentation.pptx  CyberThreatForge_Project_Report.docx  Dockerfile.backend  Dockerfile.frontend  README.md  analyze.py  analyze2.py  archivist2.py  archivist3.py  archivist4.py  archivist_cookie.py  artifact_generator.py  cross_port.py  custody_ledger.py  docker-compose.yml  explore.py  fix_metadata.py  flask_endpoints.py  full_auth.py  k8s-deployment.yml  port5003_login.py  port80.py  port80_challenges.py  profile_full.py  prometheus.yml  run_local.py  scenario_engine.py  seed_db.py  test_backend.py  test_out.txt  verify_run.py
CyberThreatForge/: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
CyberThreatForge/modules/darkweb-intel/: Dockerfile  api.py  pyproject.toml
CyberThreatForge/modules/darkweb-intel/crawlers/: breach_monitor.py  marketplace_scraper.py  ransomware_tracker.py  tor_crawler.py
CyberThreatForge/modules/darkweb-intel/models/: actor_profiler.py  threat_classifier.py
CyberThreatForge/modules/darkweb-intel/tests/: test_api.py
ai_layer/: Dockerfile  federated.py  orchestrator.py
backend/: .dockerignore  Dockerfile  refactor_pydantic.py  refactor_pydantic2.py  requirements.txt
config/: compliance.yaml  dataforge.yaml
cyberthreatforge-web/: package-lock.json  package.json
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
k8s/: deployment.yaml  ingress.yaml  service.yaml
sandbox/: Dockerfile  sandbox_runner.py
static/: index.html
(+850 files in other folders)
