[tool.poetry]
name = "darkweb-intel"
version = "1.0.0"
description = "Dark Web + Federated Intelligence Module for CyberThreatForge"
authors = ["CyberThreatForge"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
aiohttp = "^3.9.0"
beautifulsoup4 = "^4.12.0"
pydantic = "^2.5.0"
torch = "^2.2.0"
requests = "^2.31.0"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
